# hz-convert

./: .gitignore  LICENSE  README.md  hzConvert.py  hz_convert.py  setup.cfg
hz_convert/: .converters.py.swp  __init__.py  converters.py  hz.py  hz_convert.py  main.py  start.py
test/: test_converters.py  test_hz.py  test_main.py
