[metadata]
name = hz_convert
version = 0.0.1
author = Bradley Gersh
description = A converter between Hz and MIDI note formats.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bradley-gersh/hz-convert
project_urls =
    Bug Tracker = https://github.com/bradley-gersh/hz-convert/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.6

[options.packages.find]
where = .
